# PlexusBLE

PlexusBLEClient/: CMakeLists.txt
PlexusBLEClient/components/ble-client/: CMakeLists.txt  ble_client.c  ble_client.h  ble_gap.c  ble_gattc.c
PlexusBLEClient/components/ble-client/service_callbacks/: example_client_callback.c
PlexusBLEClient/components/custom-console/: CMakeLists.txt  custom_console.c  custom_console.h
PlexusBLEClient/main/: CMakeLists.txt  main.c
PlexusBLEServer/: .gitignore  CMakeLists.txt  README.md
PlexusBLEServer/components/Bluedroid/: CMakeLists.txt  ble.c
PlexusBLEServer/components/NimBLE/: CMakeLists.txt  PlexusBLE.c  PlexusBLE.h
PlexusBLEServer/components/NimBLE/NimBLEPort/: NimBLEPortDefs.h
PlexusBLEServer/components/NimBLE/PlexusServices/ExampleService/: ExampleService.c  PlexusServiceDefs.h
PlexusBLEServer/components/ble/: CMakeLists.txt  PlexusBLE.c  ble.h
PlexusBLEServer/components/ble/Bluedroid/: ble.c  ble_gap.c  ble_gatts.c
PlexusBLEServer/components/ble/Bluedroid/Services/: example_service_handler.c
PlexusBLEServer/components/ble/NimBLE/NimBLEPort/: NimBLEPort.c  NimBLEPort.h
PlexusBLEServer/components/ble/NimBLEPort/: NimBLEPortGap.c
PlexusBLEServer/components/ble/PlexusServices/ExampleService/: ExampleServiceDeclare.h
PlexusBLEServer/main/: CMakeLists.txt  main.c
